--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -37,7 +37,7 @@
         <module>cep/stratos-cep-extension</module>
         <module>cep/distribution/</module>
         <module>load-balancer</module>
-        <module>das</module>
+        <module>stratos-metering-service</module>
     </modules>
 </project>
 
