--- a/extensions/stratos-metering-service/pom.xml
+++ b/extensions/stratos-metering-service/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.apache.stratos</groupId>
+        <artifactId>stratos-parent</artifactId>
+        <version>4.1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.apache</groupId>
     <artifactId>org.apache</artifactId>
     <packaging>pom</packaging>
