Adding UI changes to integrate metering dashboard in applications' topology view

--- a/products/stratos/modules/distribution/src/main/conf/cartridge-config.properties
+++ b/products/stratos/modules/distribution/src/main/conf/cartridge-config.properties
@@ -22,8 +22,11 @@
 autoscaler.service.url=https://localhost:9443/services/AutoscalerService/
 cloud.controller.service.url=https://localhost:9443/services/CloudControllerService/
 stratos.manager.service.url=https://localhost:9443/services/StratosManagerService/
+das.metering.dashboard.url=https://localhost:9444/portal/dashboards/stratos-metering-dashboard/
 puppet.ip=127.0.0.1
 puppet.hostname=puppet.stratos.apache.org
 puppet.dns.available=false
 puppet.environment=stratos
+
+
 
