improving aws lb

--- a/extensions/load-balancer/modules/aws-extension/src/main/conf/aws.properties
+++ b/extensions/load-balancer/modules/aws-extension/src/main/conf/aws.properties
@@ -38,3 +38,5 @@ statistics-interval=60
 # You can request these details for a specific certificate object by referencing the name of the certificate object:
 # aws iam get-server-certificate --server-certificate-name your-certificate-name
 load-balancer-ssl-certificate-id=
+# Enable Application generated cookie stickiness by specifying the Cookie name uses
+app-sticky-session-cookie-name=JSESSIONID
