providing the config option to specify initial zone suffix set

--- a/extensions/load-balancer/modules/aws-extension/src/main/conf/aws.properties
+++ b/extensions/load-balancer/modules/aws-extension/src/main/conf/aws.properties
@@ -40,3 +40,11 @@ statistics-interval=60
 load-balancer-ssl-certificate-id=
 # Enable Application generated cookie stickiness by specifying the Cookie name uses
 app-sticky-session-cookie-name=JSESSIONID
+# comma separated initial set of zones (EC2 zone = <region> + a | b | c | d ...)
+# this set of initial zones will be used to tell the load balancer what are the initial zones
+# that should be considered in forwarding the requests
+# the region is determined using the member
+# example: initial-availability-zones=a,b
+# if the region is deteremined to be ap-southeast-1, initial zones will be:
+# ap-southeast-1a and ap-southeast-1b
+initial-availability-zones=a,b
